@@ -1,3 +1,8 @@
+2005-01-10  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkaccelgroup.c (gtk_accel_group_class_init): Document
+	signals.  (#163319, Murray Cumming)
+
 2005-01-09  Tor Lillqvist  <tlillqvist@novell.com>
 
 	* gdk/win32/gdkwindow-win32.c (gdk_window_set_cursor): Set current
